--- a/app/src/main/res/layout/login_user.xml
+++ b/app/src/main/res/layout/login_user.xml
@@ -32,7 +32,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:hint="Username"
+        android:hint="Email"
         android:importantForAutofill="no"
         android:padding="20dp"
         android:textColor="@color/white"
