--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -50,7 +50,7 @@
             tools:text="0" />
 
         <Button
-            android:id="@+id/TextInput"
+            android:id="@+id/OKBUTTON"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginStart="20dp"
