random locations setup and scaler for the distance

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,25 +19,13 @@
             android:id="@+id/Play"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Play"
+            android:text="@string/play"
             android:textColor="#0D47A1"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/design_default_color_secondary"/>
-
-        <Button
-            android:id="@+id/Settings"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/design_default_color_secondary"
-            android:text="@string/settings"
-            android:textColor="#0D47A1" />
 
         <Button
             android:id="@+id/buttonLogOut2"
